--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,6 @@ VCS = git
 style = pep440
 versionfile_source = mlshim/_version.py
 #versionfile_build =
-#tag_prefix =
+tag_prefix = v
 #parentdir_prefix =
 
