Jenkins is coming

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include versioneer.py
 include mlshim/_version.py
-include mlshim/*.m
-include mlshim/license.txt
-include mlshim/*.jinja2
+include LICENSE
 
+recursive-include mlshim *.m
